--- a/Project/j6Store/src/main/resources/templates/product/list.html
+++ b/Project/j6Store/src/main/resources/templates/product/list.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html  xmlns="http://www.thymeleaf.org" th:replace="~{/layout/index :: dynamic(~{::main})}">
+<html xmlns="http://www.thymeleaf.org" th:replace="~{/layout/index :: dynamic(~{::main})}">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Product List</title>
 </head>
 <body>
-<main>
-	<h1>product List</h1>
+<main class="row">
+    <div th:each="p : ${items}">
+        <!-- Hiển thị tên sản phẩm -->
+        <div th:text="${p.name}"></div>
+        
+        <!-- Hiển thị hình ảnh sản phẩm -->
+        <div>
+            <img th:src="@{${p.image}}" alt="Product Image" />
+        </div>
+    </div>
 </main>
-
 </body>
 </html>
